kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conference-api-deployment
  labels:
    app: conference-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conference-api
  template:
    metadata:
      labels:
        app: conference-api
    spec:
      containers:
      - name: conference-api
#        image: local:5000/conference-api:latest
        image: motorq_task
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "500m"
          limits:
            memory: "512Mi"
            cpu: "1"
