kubernetes/conference-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conference-db-service
  namespace: motorq
spec:
  selector:
    app: conference-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  type: ClusterIP
