kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conference-api-service
spec:
  selector:
    app: conference-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
